After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756200 - nm-tui seems to lack the ability to set ipv4.ignore-auto-routes
nm-tui seems to lack the ability to set ipv4.ignore-auto-routes
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nmtui
unspecified
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-07 20:00 UTC by Marcin Szewczyk
Modified: 2015-10-09 08:22 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Marcin Szewczyk 2015-10-07 20:00:28 UTC
The GUI editor has two options for IPv4 routes:
- Ignore automatically obtained routes (ipv4.ignore-auto-routes)
- Use this connection only for resources on its network (ipv4.never-default)

But nm-tui seems to have just the "Never use this network for default route" option (ipv4.never-default). Having ability to set ipv4.ignore-auto-routes as well would be useful.

BTW, common option labels for GUI and TUI would also be useful.
Comment 1 Jiri Klimes 2015-10-08 08:54:58 UTC
Check box for ignore-auto-routes:

http://cgit.freedesktop.org/NetworkManager/NetworkManager/log/?h=jk/nmtui-ignore-auto-routes
Comment 2 Marcin Szewczyk 2015-10-08 08:58:19 UTC
Thank you.
Comment 3 Thomas Haller 2015-10-08 09:41:39 UTC
LGTM
Comment 4 Beniamino Galvani 2015-10-08 14:03:21 UTC
Branch looks good.
Comment 5 Jiri Klimes 2015-10-09 08:22:31 UTC
Merged as
master: ce27e1e tui: add a checkbox for ignore-auto-routes (bgo #756200)
nm-1-0: 946c8e2 tui: add a checkbox for ignore-auto-routes (bgo #756200)