tui: add a checkbox for ignore-auto-routes (bgo #756200)

https://bugzilla.gnome.org/show_bug.cgi?id=756200